css/mobile.css
/************************************  LEGEND

purple: #32052F;
yellow: #fcd000;
gray: #959595;

*/

body {
  overflow: visible;
}

@media only screen and (max-width:480px) {
    #desktopview {
			display: none;
		}

		#mobileview {
			display: show;
      background-color: white;
		}

/**************************** MOBILE NAVIGATION ********************/
    .mobilelogo {
      width:10%;
      margin-top: 5%;
      margin-left: 5%;
      margin-right: 5%;
      display: inline-block;
      float: left;
      margin-bottom: 5%;
    }

    .menu {
      width:100%;
      background-color:white;
      font-size: 18px;
      display: none;
    }

    .menu h4 {
      color:#32052F;
      text-transform:uppercase;
      border-style: solid;
      border-width: 0px 0px 1px 0px;
      border-color:#32052F;
      padding: 15px;
      text-align: center;
      background-color: #fcd000;
    }

    #mobileview h1, h2 {
      display: inline-block;
    }

    #mobileview h1 {
      font-size:21px;
      margin-top:5%;
      width:70%;
    }

    #mobileview .mobileh1 {
      margin-top:-1%;
      margin-left: -20px;
    }

    #mobileview .mobileh2 {
      padding-left: 20px;
      width:100%;
    }

    #mobileview h2 {
      font-size:14px;
      margin-top:5px;
      font-weight: 400;
    }

    i {
      display: inline-block;
      float: right;
      margin-top: -5%;
      margin-right: 5%;
      color: #fcd000;
      cursor: pointer;
    }

    #stickymobile {
      position: fixed;
      background-color:rgba(50, 5, 47, 0.8);
      z-index: 2;
    }

}

/**************************** PROJECT SECTIONS ********************/

#mobileprojects {
  position: absolute;
  z-index: 1;
  margin-top:75px;
  width: 80%;
  margin-left: 10%;
}

#mobileprojects img {
  width:100%;
  height:20vh;
  object-fit: cover;
  margin-bottom:5%;
}

#mobileprojects h1 {
  background-color:#fcd000;
  font-weight: 700;
  color: white;
  padding:10px;
  width: 100%;
}

#mobileprojects h2 {
  background-color: white;
  padding: 10px;
  color:#959595;
  width:100%;
  margin-top: 0%;
}

.contactmobile h3 {
  color: #fcd000;
  margin-top: 10px;
}

.contactmobile i {
  margin-top:15px;
  display: inline-block;
  float: left;
  width:15%;
  margin-bottom: 20px;
  margin-top:10px;
}

.lastmobile {
  margin-bottom: 20px;
}

/*************************** WORK PAGE MOBILE ****************/
.projectbkgmobile img {
  width:90%;
  height:40vh;
  object-fit: cover;
  margin-left: 5%;
}

.mobiletext {
  width:100%;
  height:auto;
  background-color: white;
}
.mobileheader {
  padding-top:22.5%;
}

#mobileview .mobileheader h1 {
  background-color:#fcd000;
  font-size: 35px;
  color:white;
  width: 90%;
  padding: 10px;
  margin-left: 5%;
  margin-top: 50px;
}

#mobileview .mobileheader h2 {
  font-size: 18px;
  width: 90%;
  margin-left: 5%;
  padding:10px;
  background-color: #959595;
  color:white;
  line-height:25px;
}

.mobiletext p {
  margin-top:7.5%;
  font-size: 18px;
  width:90%;
  margin-left: 5%;
  line-height:25px;
  margin-bottom: 7.5%;
}

.imagemobile {
  width:90%;
  height:40vh;
  object-fit: cover;
  margin-left: 5%;
}

.smallphotomobile {
  width:90%;
  height:40vh;
  object-fit: cover;
  margin-left: 5%;
}

#lastmobile {
  margin-bottom: 5%;
}

.mobilefooter {
  background-color: #32052F;
  color:#fcd000;
  width: 100%;
}

.mobilefooter img {
  width:80%;
  margin-left: 10%;
  margin-bottom:5%;
}

.nextprojectmobile {
  background-color: #32052F;
}

.nextprojectmobile h4 {
  width:80%;
  margin-left:10%;
  background-color: #fcd000;
  color:white;
  font-size:21px;
  padding: 10px;
  margin-bottom: -5px;
}

.nextprojectmobile h2 {
  width:80%;
  margin-left:10%;
  color: #959595;
  background-color:white;
  font-size:18px;
  padding: 10px;
}

.nextprojectmobile h3 {
  width:80%;
  margin-left:10%;
  font-size:18px;
  padding-top:10%;
  padding-bottom: 5%;
}

.contactmobile {
  background-color: #32052F;
  margin-left:10%;
}

#mobileicons {
  margin-left: 10%;
  padding-bottom: 10%;
  padding-top: 5%;
}
#mobileicons i {
  width:12.5%;
  float: none;
}


.indexmobile {
  width:100%;
  margin-left:0%;
}

.marginbottommobile {
  margin-bottom: 5%;
}

.pbold {
  font-weight: 700;
}

/******************* CONTACT MOBILE *********/

.contactsticky {
  width:100%;
  position: fixed;
  height:auto;
}

#contactbody{
  overflow:visible;
}

.hamburgercontact {
  position: fixed;
  display: inline-block;
  float: right;
  margin-top: 6%;
  margin-left:3%;
}

.mobileh2 {
  width:50%;
  position: fixed;
  margin-left: -70%;
  padding-top:37.5px;
}

.profileimgmobile img {
  width:100%;
  height:60vh;
  object-fit: cover;
}

#contactmobilecontent {
  padding-top:70px;
  background-color: #32052F;
}

#contactmobilecontent h1 {
  background-color: #fcd000;
  color:white;
  width:100%;
  padding: 10px;
  font-size: 30px;
  margin-bottom: 0%;
}

#contactp {
  background-color: white;
  font-size: 18px;
  padding:5% 5% 10% 5%;
  line-height:24px;
  color:#625e5e;
  margin-top: -2px;
}

#contactmobilefooter  {
  width:100%;
  margin-top: -20px;
}

.mobilei{
  width:10%;
  margin-left:10%;
  display: inline-block;
}

.mobilei i {
  width:100%;
  margin-top:30px;
}

.mobilea {
  width:80%;
  display: inline-block;
  float: right;
  margin-top:30px;
}

.mobilea p {
  margin-bottom:30px;
}

i {
  z-index: 500;
  display: show;
  visibility: visible;
}

#projectlistmobile {
  background-color:#32052F;
  padding-top: 70px;
}

#projectlistmobile h1 {
  color:white;
  background-color:#fcd000;
  font-size:24px;
  padding:10px;
  width:90%;
  margin-left: 5%;
  margin-bottom: 0%;
}

  #awardmobile{
    width:90%;
    margin-top: 5%;
    margin-left: 5%;
  }
/************************  DON'T TOUCH THIS PART ***********************/
@media (min-width:600px)  {

  #desktopview {
    display: show;
  }

  #mobileview {
    display:none;
  }

}

@media only screen and (min-width:1200px) {
    #desktopview {
			display: show;
		}

		#mobileview {
			display:none;
		}
}

